--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/arroz_pollo.html">Arroz con pollo</a></li>
+        <li><a href="recipes/ceviche.html">Ceviche</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      </ul>
 </body>
 </html>
