We linked the recipes with the main index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/chef.jpg" alt="Chefs cooking">
     <ul>
         <li><a href="recipes/arroz_pollo.html">Arroz con pollo</a></li>
         <li><a href="recipes/ceviche.html">Ceviche</a></li>
