Steps to follow in the recipes.

--- a/recipes/arroz_pollo.html
+++ b/recipes/arroz_pollo.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arroz con pollo</title>
+    <title>Pollo a la brasa</title>
 </head>
 <body>
-    
+    <p>
+        This is an excellent peruvian food to eat in family
+    </p>
+    <img src="../images/pollo_brasa.jpg" alt="pollo_brasa">
+    <p>You have to follow the next steps.</p>
+    <ul>
+        <li>Roast the chicken.</li>
+        <li>You have to frie the potatoes.</li>
+        <li>Put it in your plate.</li>
+        <li>Enjoy it!</li>
+        <li>You can add it ketchup and mayonaise
+            (¡I totally recommend it!)
+        </li>
+    </ul>
 </body>
 </html>
