--- a/recipes/ceviche.html
+++ b/recipes/ceviche.html
@@ -7,6 +7,16 @@
     <title>Ceviche</title>
 </head>
 <body>
+    <p>
+        This is a peruvian food and it is considered as a Flag Preuvian dish.
+    </p>
+    <img src="../images/ceviche.jpg" alt="ceviche">
+    <p>You have to follow the next steps.</p>
+    <ul>
+        <li>Cut the fish in squares.</li>
+        <li>Add limon and salt.</li>
+        <li>¡That's it!</li>
+    </ul>
     
 </body>
 </html>
