--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,15 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <p>A really nice dish to eat in family</p>
-    <img src="" alt="Lasagna">
+    <p>A really nice Italian dish to eat in family</p>
+    <img src="../images/lasagna-original..jpg" alt="Lasagna">
+    <p>You have to follow the next steps.</p>
+    <ul>
+        <li>Get a special dough for lasagna.</li>
+        <li>Add the mix to the dough.</li>
+        <li>Add the meat to the lasagna layer by layer.</li>
+        <li>Put it in the wave for 30 minutes.</li>
+        <li>¡That's it!</li>
+    </ul>
 </body>
 </html>
