Adding a text to return main page.

--- a/recipes/arroz_pollo.html
+++ b/recipes/arroz_pollo.html
@@ -17,9 +17,9 @@
         <li>You have to frie the potatoes.</li>
         <li>Put it in your plate.</li>
         <li>Enjoy it!</li>
-        <li>You can add it ketchup and mayonaise
-            (¡I totally recommend it!)
-        </li>
+        <li>You can add it ketchup and mayonaise (¡I totally recommend it!)</li>
     </ul>
+    <p></p>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
