--- a/recipes/ceviche.html
+++ b/recipes/ceviche.html
@@ -13,10 +13,11 @@
     <img src="../images/ceviche.jpg" alt="ceviche">
     <p>You have to follow the next steps.</p>
     <ul>
-        <li>Cut the fish in squares.</li>
+        <li>Cut the fish into small pieces.</li>
         <li>Add limon and salt.</li>
         <li>¡That's it!</li>
     </ul>
-    
+    <p></p>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
