--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,8 +14,10 @@
         <li>Get a special dough for lasagna.</li>
         <li>Add the mix to the dough.</li>
         <li>Add the meat to the lasagna layer by layer.</li>
-        <li>Put it in the wave for 30 minutes.</li>
+        <li>Put it in the oven for 30 minutes.</li>
         <li>¡That's it!</li>
     </ul>
+    <p></p>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
