--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <img src="images/chef.jpg" alt="Chefs cooking">
     <ul>
-        <li><a href="recipes/arroz_pollo.html">Arroz con pollo</a></li>
+        <li><a href="recipes/arroz_pollo.html">Pollo a la brasa</a></li>
         <li><a href="recipes/ceviche.html">Ceviche</a></li>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
       </ul>
